# Forge

./: .gitignore  Cargo.toml  Forge_Optimization_Implementation_Roadmap.md  Forge_Performance_Engineering_Report.md  README.md  build_dependencies.txt  forge-installer  forge_comprehensive_audit_report.md  performance_math_optimization_report.md  refactor_event_loop.py  refactor_screen_buffer.py  runtime_dependencies.txt
crates/forge-config/src/: actor.rs  config_test.rs  default_config.lua  extractor.rs  lib.rs  types.rs  watcher.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: bindings.rs  cache.rs  cell.rs  color.rs  config_registry.rs  crash.rs  error.rs  lib.rs
crates/forge-main/: Cargo.toml
crates/forge-main/src/: bin.rs  event_loop.rs  font_paths.rs  main.rs
crates/forge-main/src/wayland/: blur.rs  clipboard.rs  connection.rs  frame_callback.rs  mod.rs  niri_blur_rule.rs  seat.rs  shm_buffer.rs  window.rs
crates/forge-pty/: Cargo.toml
crates/forge-pty/benches/: pty_baseline.rs
crates/forge-pty/src/: grid.rs  lib.rs  pty.rs  screen_buffer.rs  vte_parser.rs
crates/forge-renderer/: Cargo.toml  build.rs  tests.rs
crates/forge-renderer/benches/: tessellation_baseline.rs
crates/forge-renderer/src/: device.rs  frame.rs  framebuffer.rs  grid_tessellator.rs  instance.rs  lib.rs  pipeline.rs  render_pass.rs  renderer.rs  surface.rs  swapchain.rs  sync.rs  texture.rs
crates/forge-renderer/src/font/: atlas.rs  mod.rs  rasterizer.rs  shaper.rs
crates/forge-renderer/src/shaders/: grid.frag.glsl  grid.vert.glsl
docs/: performance_baseline.md  simd_policy.md  text_rendering_techniques_report.md
installer-src/: CMakeLists.txt
installer-src/example/source-code-v1.0.0/: Cargo.toml
installer-src/example/source-code-v1.0.0/crates/forge-config/: Cargo.toml
installer-src/example/source-code-v1.0.0/crates/forge-config/src/: actor.rs  extractor.rs  lib.rs  types.rs  watcher.rs
installer-src/example/source-code-v1.0.0/crates/forge-core/src/: bindings.rs  cell.rs  color.rs  error.rs  geometry.rs
installer-src/example/source-code-v1.0.0/crates/forge-main/src/: event_loop.rs
installer-src/example/source-code-v1.0.0/crates/forge-main/src/wayland/: clipboard.rs  mod.rs  seat.rs  window.rs
installer-src/example/source-code-v1.0.0/crates/forge-plugins/: Cargo.toml
installer-src/example/source-code-v1.0.0/crates/forge-plugins/src/: lib.rs
installer-src/example/source-code-v1.0.0/crates/forge-pty/src/: circular_grid.rs  grid.rs  lib.rs  screen_buffer.rs  vte_parser.rs
installer-src/example/source-code-v1.0.0/crates/forge-renderer/: Cargo.toml  box_draw.rs  build.rs  generate_box.py
installer-src/example/source-code-v1.0.0/crates/forge-renderer/src/: frame.rs  framebuffer.rs  instance.rs  lib.rs  renderer.rs  surface.rs
installer-src/example/source-code-v1.0.0/crates/forge-renderer/src/font/: mod.rs
installer-src/plan/: INSTALLER_PLAN.md  build_dependencies.txt  runtime_dependencies.txt
installer-src/src/: main.cpp
installer-src/src/core/: extractor.cpp  extractor.h  installer_state.cpp  installer_state.h  network_client.cpp  network_client.h  package_manager.cpp  package_manager.h  uninstaller.cpp  uninstaller.h
installer-src/src/gui/: main_window.cpp  main_window.h  step_mode_selection.cpp  step_mode_selection.h  step_progress.cpp  step_progress.h  step_uninstall_confirm.cpp  step_uninstall_confirm.h  step_uninstall_progress.cpp  step_uninstall_progress.h  step_welcome.cpp  step_welcome.h
installer-src/src/utils/: system_utils.cpp  system_utils.h
installer-src/tests/: test_main.cpp
notes/: blur_implementation_plan.md  idea.md  init.md  instanced_rendering_evaluation.md  multi_atlas_eviction_implementation_plan.md  optimization_implementation_plan.md  optimization_status_simple.txt  rendering_baseline_checklist.md  techniques.md  techniques_analysis.md  wayland_damage_tracking_design.md
