[package]
name = "forge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
memmap2 = { workspace = true }

